fix: adjust folder tab spacing

--- a/pages/media-library/index.scss
+++ b/pages/media-library/index.scss
@@ -29,7 +29,7 @@
 	}
 
 	.folder-tabs {
-        padding: 1.25rem 0.75rem;
+        padding: 1.25rem 1rem;
 	}
 
 
